got stuck on editing a book and try to solve id

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,13 @@ body {
   background-color: beige;
 }
 
+main {
+  min-height: 90vh;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .nav-link {
   color: black;
   margin: 0 1rem 0 0;
